--- a/docs/customize/deep-dives/model-capabilities.mdx
+++ b/docs/customize/deep-dives/model-capabilities.mdx
@@ -45,7 +45,9 @@ For implementation details, see:
 You can add capabilities to models that Continue doesn't automatically detect in your `config.yaml`.
 
 <Note>
-You cannot override autodetection - you can only add capabilities. Continue will always use its built-in knowledge about your model in addition to any capabilities you specify.
+  You cannot override autodetection - you can only add capabilities. Continue
+  will always use its built-in knowledge about your model in addition to any
+  capabilities you specify.
 </Note>
 
 ```yaml
@@ -89,10 +91,10 @@ models:
 </Info>
 
 <Warning>
-  **Experimental**: System message tools are available as an experimental feature
-  for models without native tool support. These are not automatically used as a
-  fallback and must be explicitly configured. Most models are trained for native
-  tools, so system message tools may not work as well.
+  **Experimental**: System message tools are available as an experimental
+  feature for models without native tool support. These are not automatically
+  used as a fallback and must be explicitly configured. Most models are trained
+  for native tools, so system message tools may not work as well.
 </Warning>
 
 ### How to Handle Models with Limited Capabilities
