--- a/docs/customize/model-providers/top-level/azure.mdx
+++ b/docs/customize/model-providers/top-level/azure.mdx
@@ -50,10 +50,13 @@ We recommend configuring **GPT-4o** as your chat model.
 
 ## How to Set Up Azure AI Foundry Autocomplete Models
 
-We recommend configuring **Codestral** as your autocomplete model. 
+We recommend configuring **Codestral** as your autocomplete model.
 
 <Info>
-**Note:** Azure AI Foundry does not provide the FIM (Fill-in-Middle) endpoint required for autocomplete functionality. To use Codestral for autocomplete, deploy it through **Azure Machine Learning Studio** instead, which provides the necessary `/v1/fim/completions` endpoint.
+  **Note:** Azure AI Foundry does not provide the FIM (Fill-in-Middle) endpoint
+  required for autocomplete functionality. To use Codestral for autocomplete,
+  deploy it through **Azure Machine Learning Studio** instead, which provides
+  the necessary `/v1/fim/completions` endpoint.
 </Info>
 
 If you use Azure Machine Learning Studio to deploy Codestral:
