--- a/docs/features/agent/plan-mode.mdx
+++ b/docs/features/agent/plan-mode.mdx
@@ -20,6 +20,7 @@ Plan mode is a restricted environment that provides read-only access to your cod
 ### How Plan Mode Works
 
 Plan mode filters the available tools to only include read-only operations. This means you can:
+
 - Read any file in your project
 - Search through code with grep and glob patterns
 - View repository structure and diffs
@@ -27,6 +28,7 @@ Plan mode filters the available tools to only include read-only operations. This
 - Use all MCP tools
 
 But you cannot:
+
 - Create, edit, or delete files
 - Run terminal commands
 - Make any system changes
@@ -46,5 +48,7 @@ For detailed information about tools and usage, see the [Agent documentation](/f
 3. **Switch to Agent mode** when ready to implement
 
 <Tip>
-  Plan mode shares the same interface and context features as Chat and Agent modes. You can use `@` context providers and highlight code just like in other modes.
+  Plan mode shares the same interface and context features as Chat and Agent
+  modes. You can use `@` context providers and highlight code just like in other
+  modes.
 </Tip>
