--- a/docs/features/agent/quick-start.mdx
+++ b/docs/features/agent/quick-start.mdx
@@ -10,7 +10,7 @@ Agent equips the Chat model with the tools needed to handle a wide range of codi
     <Card title="Chat Mode" icon="comments">
       *Learn and discuss without changing code.*
 
-      **Mental Model:** Talking to a knowledgeable colleague         
+      **Mental Model:** Talking to a knowledgeable colleague
 
       **Best For:** Explaining concepts, comparing approaches, code review discussions.
 
@@ -29,16 +29,18 @@ Agent equips the Chat model with the tools needed to handle a wide range of codi
     *Make actual changes with full tool access.*
 
       **Mental Model:** Contractor executing approved blueprints
-      
+
       **Best For:** Implementing features, fixing bugs, running tests and commands.
 
     </Card>
+
   </Columns>  
 </Accordion>
 
 ### How to Use Agent Mode
 
 You can switch to `Agent` in the mode selector below the chat input box. The mode selector offers three options:
+
 - **Chat**: No tools available, pure conversation
 - **Plan**: Read-only tools for safe exploration and planning
 - **Agent**: All tools available for making changes
@@ -46,9 +48,9 @@ You can switch to `Agent` in the mode selector below the chat input box. The mod
 ![How to select agent mode](/images/mode-select-agent.png)
 
 <Info>
-  If Agent or Plan is disabled with a `Not Supported` message, the selected model or
-  provider doesn't support tools, or Continue doesn't yet support tools with it.
-  See [Model Blocks](/customization/models) for more information.
+  If Agent or Plan is disabled with a `Not Supported` message, the selected
+  model or provider doesn't support tools, or Continue doesn't yet support tools
+  with it. See [Model Blocks](/customization/models) for more information.
 </Info>
 
 <Tip>
