--- a/docs/customize/context/documentation.mdx
+++ b/docs/customize/context/documentation.mdx
@@ -213,9 +213,12 @@ If your documentation is private, you can skip the default crawler and use a loc
 </Tabs>
 
 <Info>
-  The default local crawler is a lightweight tool that cannot render sites that are dynamically generated using JavaScript. If your sites need to be rendered, you can enable the experimental `Use Chromium for Docs Crawling` feature from your [User Settings Page](../settings) This will download and install Chromium to `~/.continue/.utils`, and use it as the local crawler.
-  
-  **Note:** Chromium crawling support is being deprecated and may be removed in future versions.
+  The default local crawler is a lightweight tool that cannot render sites that
+  are dynamically generated using JavaScript. If your sites need to be rendered,
+  you can enable the experimental `Use Chromium for Docs Crawling` feature from
+  your [User Settings Page](../settings) This will download and install Chromium
+  to `~/.continue/.utils`, and use it as the local crawler. **Note:** Chromium
+  crawling support is being deprecated and may be removed in future versions.
 </Info>
 
 Further notes:
