--- a/docs/features/plan/how-it-works.mdx
+++ b/docs/features/plan/how-it-works.mdx
@@ -46,7 +46,10 @@ Plan mode includes these read-only built-in tools:
 In addition to built-in read-only tools, Plan mode also supports all MCP (Model Context Protocol) tools. This allows integration with external services that provide additional context or analysis capabilities without modifying your local environment.
 
 <Info>
-  While Plan mode restricts built-in tools to read-only operations, MCP tools are not filtered by Continue. Some MCP tools may have write capabilities that could modify your system or external services. Always verify what actions your MCP tools can perform before using them in Plan mode.
+  While Plan mode restricts built-in tools to read-only operations, MCP tools
+  are not filtered by Continue. Some MCP tools may have write capabilities that
+  could modify your system or external services. Always verify what actions your
+  MCP tools can perform before using them in Plan mode.
 </Info>
 
 ## The planning workflow
