--- a/docs/features/plan/quick-start.mdx
+++ b/docs/features/plan/quick-start.mdx
@@ -15,7 +15,7 @@ You can switch to `Plan` in the mode selector below the chat input box.
 
 <Info>
   If Plan is disabled with a `Not Supported` message, the selected model or
-  provider doesn't support tools. See [Model Setup](/features/plan/model-setup) 
+  provider doesn't support tools. See [Model Setup](/features/plan/model-setup)
   for more information.
 </Info>
 
@@ -26,6 +26,7 @@ Plan mode lives within the same interface as [Chat](/features/chat/how-it-works)
 #### What makes Plan different
 
 Unlike Agent mode, Plan mode:
+
 - Only uses read-only tools (file reading, searching, analysis)
 - Cannot modify, create, or delete files
 - Focuses on understanding and planning rather than execution
@@ -34,6 +35,7 @@ Unlike Agent mode, Plan mode:
 ### Common use cases
 
 Plan mode is ideal for:
+
 - **Code exploration**: Understanding how a codebase works
 - **Planning refactors**: Analyzing impact before making changes
 - **Debugging**: Investigating issues without modifying code
@@ -57,5 +59,6 @@ Plan mode will analyze the existing code, understand the current implementation,
 When you're ready to implement your plan, simply switch to Agent mode using the mode selector or keyboard shortcut (`Cmd/Ctrl + .`). The conversation context carries over, so Agent mode can immediately start implementing the plan you developed.
 
 <Tip>
-  Use the keyboard shortcut `Cmd/Ctrl + .` to quickly cycle between Agent, Chat, and Plan modes.
+  Use the keyboard shortcut `Cmd/Ctrl + .` to quickly cycle between Agent, Chat,
+  and Plan modes.
 </Tip>
