--- a/docs/customize/model-roles/autocomplete.mdx
+++ b/docs/customize/model-roles/autocomplete.mdx
@@ -11,7 +11,7 @@ In Continue, autocomplete models are used to display inline [Autocomplete](../..
 
 ## Recommended Autocomplete models
 
-Visit the [Autocomplete Deep Dive](../deep-dives/autocomplete.mdx) for recommended models and more details.
+Visit the [Autocomplete Deep Dive](../deep-dives/autocomplete) for recommended models and more details.
 
 ## Prompt templating
 
