Improve title and description

--- a/docs/customize/model-roles/autocomplete.mdx
+++ b/docs/customize/model-roles/autocomplete.mdx
@@ -1,6 +1,7 @@
 ---
-title: Autocomplete Role
-description: Autocomplete model role
+title: "Autocomplete Role in Continue Models"
+sidebarTitle: "Autocomplete Role"
+description: "Learn how the autocomplete role works in Continue, which models to use, and how to customize prompt templates for inline code suggestions."
 keywords: [autocomplete, model, role]
 sidebar_position: 2
 ---
