Fix broken links

--- a/docs/customize/overview.mdx
+++ b/docs/customize/overview.mdx
@@ -13,7 +13,7 @@ Master how Continue understands your codebase with powerful context providers fo
 
 Specialized context features for codebase understanding and documentation integration.
 
-[Browse Context Features →](/customization/overview#codebase-context)
+[Browse Context Features →](/customize/context/codebase)
 
 ## Deep Dives
 
