--- a/docs/reference.mdx
+++ b/docs/reference.mdx
@@ -15,7 +15,7 @@ Continue hub assistants are defined using the `config.yaml` specification. Assis
 
 <Info>
   Config YAML replaces `config.json`, which is deprecated. View the **[Migration
-  Guide](/customize/yaml-migration)**.
+  Guide](/reference/yaml-migration)**.
 </Info>
 
 An assistant is made up of:
@@ -317,7 +317,7 @@ context:
 
 ### `rules`
 
-List of rules that the LLM should follow. These are concatenated into the system message for all [Agent](/features/agent/quick-start), [Chat](/features/chat/quick-start), and [Edit](/features/edit/quick-start) requests. See the [rules deep dive](/customization/rules) for details.
+List of rules that the LLM should follow. These are concatenated into the system message for all [Agent](/features/agent/quick-start), [Chat](/features/chat/quick-start), and [Edit](/features/edit/quick-start) requests. See the [rules deep dive](/customize/deep-dives/rules) for details.
 
 Explicit rules can either be simple text or an object with the following properties:
 
