--- a/docs/customize/custom-providers.mdx
+++ b/docs/customize/custom-providers.mdx
@@ -131,7 +131,7 @@ config.json
 
 Note that this will only enable the `@Docs` context provider.
 
-To use it, you need to add a documentation site to your config file. See the [docs](/customization/overview#documentation-context) page for more information.
+To use it, you need to add a documentation site to your config file. See the [docs](/customize/overview#documentation-context) page for more information.
 
 ### @Open Context Provider – Reference All Open Files or Pinned Files
 
@@ -199,7 +199,7 @@ config.json
 { "contextProviders": [{ "name": "codebase" }] }
 ```
 
-Read more about indexing and retrieval [here](/customization/overview#codebase-context).
+Read more about indexing and retrieval [here](/customize/overview#codebase-context).
 
 ### @Folder Context Provider – Reference Code from a Specific Folder
 
