--- a/docs/guides/running-continue-without-internet.mdx
+++ b/docs/guides/running-continue-without-internet.mdx
@@ -5,5 +5,5 @@ description: "Learn how to set up Continue for air-gapped or offline environment
 
 1. Download the latest .vsix file from the [Open VSX Registry](https://open-vsx.org/extension/Continue/continue) and [install it to VS Code](https://code.visualstudio.com/docs/editor/extension-marketplace#_install-from-a-vsix).
 2. Open the [User Settings Page](/customize/settings) and turn off "Allow Anonymous Telemetry". This will stop Continue from attempting requests to PostHog for [anonymous telemetry](/customize/telemetry).
-3. Also in `config.json`, set the default model to a local model. You can available options [here](/customization/models#openai).
+3. Also in `config.json`, set the default model to a local model. You can find available options [here](/customization/models#openai).
 4. Restart VS Code to ensure that the changes to `config.json` or `config.yaml` take effect.
