--- a/docs/reference/json-reference.mdx
+++ b/docs/reference/json-reference.mdx
@@ -20,7 +20,7 @@ Below are details for each property that can be set in `config.json`. The config
 
 ## `models`
 
-Your **chat** models are defined here, which are used for [Chat](/features/chat/how-it-works), [Edit](/features/edit/how-it-works) and [VS Code actions](/customization/overview#vscode-actions).
+Your **chat** models are defined here, which are used for [Chat](/features/chat/how-it-works), [Edit](/features/edit/how-it-works) and [VS Code actions](/customize/overview#vscode-actions).
 
 Each model has specific configuration options tailored to its provider and functionality, which can be seen as suggestions while editing the json.
 
@@ -498,7 +498,7 @@ Several experimental config parameters are available, as described below:
   - `fix`: Prompt for fixing code.
   - `optimize`: Prompt for optimizing code.
 
-- `modelContextProtocolServers`: See [Model Context Protocol](/customization/mcp-tools)
+- `modelContextProtocolServers`: See [Model Context Protocol](/customize/deep-dives/mcp)
 
 Example
 
