--- a/docs/reference.mdx
+++ b/docs/reference.mdx
@@ -185,7 +185,7 @@ The `models` section defines the language models used in your configuration. Mod
 
 - `maxStopWords`: Maximum number of stop words allowed, to avoid API errors with extensive lists.
 
-- `promptTemplates`: Can be used to override the default prompt templates for different model roles. Valid values are `chat`, [`edit`](/customize/model-roles#edit-prompt-templating), [`apply`](/customize/model-roles#apply-prompt-templating) and [`autocomplete`](/customize/model-roles#autocomplete-prompt-templating). The `chat` property must be a valid template name, such as `llama3` or `anthropic`.
+- `promptTemplates`: Can be used to override the default prompt templates for different model roles. Valid values are [`chat`](), [`edit`](/customize/model-roles/edit#edit-prompt-templating), [`apply`](/customize/model-roles/apply#apply-prompt-templating) and [`autocomplete`](/customize/model-roles/autocomplete#autocomplete-prompt-templating). The `chat` property must be a valid template name, such as `llama3` or `anthropic`.
 
 - `chatOptions`: If the model includes role `chat`, these settings apply for Agent and Chat mode:
 
@@ -412,7 +412,7 @@ mcpServers:
 
 ### `data`
 
-Destinations to which [development data](/customize/overview#development-data) will be sent.
+Destinations to which [development data](/customize/deep-dives/development-data) will be sent.
 
 **Properties:**
 
