Fix broken embedding links

--- a/docs/customize/model-roles/embeddings.mdx
+++ b/docs/customize/model-roles/embeddings.mdx
@@ -118,7 +118,7 @@ See [here](../model-providers/top-level/ollama#embeddings-model) for instruction
 
 ### OpenAI
 
-See [here](../model-providers/top-level/openai#embeddings-model) for instructions on how to use OpenAI for embeddings.
+See [here](../model-providers/top-level/openai#how-to-configure-openai-embeddings-models) for instructions on how to use OpenAI for embeddings.
 
 ### Cohere
 
@@ -126,15 +126,15 @@ See [here](../model-providers/more/cohere#embeddings-model) for instructions on 
 
 ### Gemini
 
-See [here](../model-providers/top-level/gemini#embeddings-model) for instructions on how to use Gemini for embeddings.
+See [here](../model-providers/top-level/gemini#how-to-configure-gemini-embeddings-models) for instructions on how to use Gemini for embeddings.
 
 ### Vertex
 
-See [here](../model-providers/top-level/vertexai#embeddings-model) for instructions on how to use Vertex for embeddings.
+See [here](../model-providers/top-level/vertexai#how-to-configure-vertex-ai-embeddings-models) for instructions on how to use Vertex for embeddings.
 
 ### Mistral
 
-See [here](../model-providers/top-level/mistral#embeddings-model) for instructions on how to use Mistral for embeddings.
+See [here](../model-providers/top-level/mistral#how-to-configure-mistral-embeddings-models) for instructions on how to use Mistral for embeddings.
 
 ### NVIDIA
 
@@ -142,7 +142,7 @@ See [here](../model-providers/more/nvidia#embeddings-model) for instructions on 
 
 ### Bedrock
 
-See [here](../model-providers/top-level/bedrock#embeddings-model) for instructions on how to use Bedrock for embeddings.
+See [here](../model-providers/top-level/bedrock#how-to-configure-amazon-bedrock-embeddings-models) for instructions on how to use Bedrock for embeddings.
 
 ### WatsonX
 
