Remove md, mdx, and fix broken links

--- a/docs/customize/deep-dives/prompts.mdx
+++ b/docs/customize/deep-dives/prompts.mdx
@@ -8,7 +8,7 @@ Prompts are reusable instructions that can be referenced at any time during chat
 <Info>
   Prompts were previously defined in a `.prompt` file format, but for
   consistency we now recommend using the same Markdown format as
-  [rules](./rules.mdx) and adding `alwaysApply: false` to the frontmatter so
+  [rules](./rules) and adding `alwaysApply: false` to the frontmatter so
   that they are manually triggered.
 </Info>
 
