--- a/docs/customize/deep-dives/rules.mdx
+++ b/docs/customize/deep-dives/rules.mdx
@@ -8,8 +8,8 @@ sidebarTitle: "Rules"
 Rules provide instructions to the model for [Agent](../../features/agent/quick-start), [Chat](../../features/chat/quick-start), and [Edit](../../features/edit/quick-start) requests.
 
 <Info>
-  Rules are not included in [autocomplete](./autocomplete.mdx) or
-  [apply](../model-roles/apply.mdx).
+  Rules are not included in [autocomplete](./autocomplete) or
+  [apply](../model-roles/apply).
 </Info>
 
 ## How Rules Work in Continue
