--- a/docs/customize/deep-dives/slash-commands.mdx
+++ b/docs/customize/deep-dives/slash-commands.mdx
@@ -23,7 +23,7 @@ Slash commands can be combined with additional instructions, including [context 
 
 ### Assistant Prompt Blocks
 
-The easiest way to add a slash command is by adding [`prompt` blocks](../../hub/blocks/block-types#prompts) to your assistant, which show up as slash commands in [Chat](../../features/chat/how-it-works.mdx).
+The easiest way to add a slash command is by adding [`prompt` blocks](../../hub/blocks/block-types#prompts) to your assistant, which show up as slash commands in [Chat](../../features/chat/how-it-works).
 
 ### Prompt Files
 
@@ -33,4 +33,4 @@ Learn more about prompt files [here](./prompts).
 
 ### MCP Server Prompts
 
-Any prompts provided by [Model Context Protocol](https://modelcontextprotocol.io/introduction) servers are also accessible in chat as Slash Commands. See the [MCP Server Deep Dive](./mcp.mdx) for more details.
+Any prompts provided by [Model Context Protocol](https://modelcontextprotocol.io/introduction) servers are also accessible in chat as Slash Commands. See the [MCP Server Deep Dive](./mcp) for more details.
