--- a/docs/customize/model-providers/top-level/bedrock.mdx
+++ b/docs/customize/model-providers/top-level/bedrock.mdx
@@ -81,7 +81,7 @@ We recommend configuring **Claude 3.7 Sonnet** as your chat model.
 
 Bedrock currently does not offer any autocomplete models. However, [Codestral from Mistral](https://mistral.ai/news/codestral-2501/) and [Point from Poolside](https://aws.amazon.com/bedrock/poolside/) will be supported in the near future.
 
-In the meantime, you can view a list of autocomplete model providers [here](../../model-roles/autocomplete.md).
+In the meantime, you can view a list of autocomplete model providers [here](../../model-roles/autocomplete).
 
 ## How to Configure Amazon Bedrock Embeddings Models
 
