--- a/docs/customize/model-providers/top-level/ollama.mdx
+++ b/docs/customize/model-providers/top-level/ollama.mdx
@@ -94,7 +94,7 @@ We recommend configuring **Nomic Embed Text** as your embeddings model.
 
 Ollama currently does not offer any reranking models.
 
-[Click here](../../model-roles/reranking.mdx) to see a list of reranking model providers.
+[Click here](../../model-roles/reranking) to see a list of reranking model providers.
 
 ## How to Configure Remote Ollama Instance
 
