--- a/docs/customize/model-providers/top-level/xAI.mdx
+++ b/docs/customize/model-providers/top-level/xAI.mdx
@@ -46,7 +46,7 @@ We recommend configuring **grok-4** as your chat model. For information on other
 
 xAI currently does not offer any autocomplete models.
 
-[Click here](../../model-roles/autocomplete.md) to see a list of autocomplete model providers.
+[Click here](../../model-roles/autocomplete) to see a list of autocomplete model providers.
 
 ## How to Configure xAI Embeddings Models
 
