--- a/docs/customize/deep-dives/configuration.mdx
+++ b/docs/customize/deep-dives/configuration.mdx
@@ -31,7 +31,7 @@ See the full reference for `config.yaml` [here](/reference).
 ## Legacy Configuration Methods (Deprecated)
 
 <Info>
-  View the `config.json` migration guide [here](../yaml-migration.mdx)
+  View the `config.json` migration guide [here](../yaml-migration)
 </Info>
 
 - [`config.json`](/reference) - The original configuration format which is stored in a file at the same location as `config.yaml`
