--- a/docs/customize/model-providers/more/cohere.mdx
+++ b/docs/customize/model-providers/more/cohere.mdx
@@ -39,7 +39,7 @@ We recommend configuring **Command A** as your chat model.
 
 Cohere currently does not offer any autocomplete models.
 
-[Click here](../../model-roles/autocomplete.md) to see a list of autocomplete model providers.
+[Click here](../../model-roles/autocomplete) to see a list of autocomplete model providers.
 
 ## Embeddings model
 
