--- a/docs/customize/model-providers/more/nvidia.mdx
+++ b/docs/customize/model-providers/more/nvidia.mdx
@@ -43,7 +43,7 @@ We recommend configuring **Nemotron-4-340B-Instruct** as your chat model.
 
 NVIDIA currently does not offer any autocomplete models.
 
-[Click here](../../model-roles/autocomplete.md) to see a list of autocomplete model providers.
+[Click here](../../model-roles/autocomplete) to see a list of autocomplete model providers.
 
 ## Embeddings model
 
