--- a/docs/customize/model-providers/more/scaleway.mdx
+++ b/docs/customize/model-providers/more/scaleway.mdx
@@ -47,7 +47,7 @@ We recommend configuring **Qwen2.5-Coder-32B-Instruct** as your chat model.
 
 Scaleway currently does not offer any autocomplete models.
 
-[Click here](../../model-roles/autocomplete.md) to see a list of autocomplete model providers.
+[Click here](../../model-roles/autocomplete) to see a list of autocomplete model providers.
 
 ## Embeddings model
 
