--- a/docs/customize/model-providers/more/vllm.mdx
+++ b/docs/customize/model-providers/more/vllm.mdx
@@ -102,6 +102,6 @@ We recommend configuring **Nomic Embed Text** as your embeddings model.
 
 Continue automatically handles vLLM's response format (which uses `results` instead of `data`).
 
-[Click here](../../model-roles/reranking.mdx) to see a list of reranking model providers.
+[Click here](../../model-roles/reranking) to see a list of reranking model providers.
 
-The continue implementation uses [OpenAI](../top-level/openai.mdx) under the hood. [View the source](https://github.com/continuedev/continue/blob/main/core/llm/llms/Vllm.ts)
+The continue implementation uses [OpenAI](../top-level/openai) under the hood. [View the source](https://github.com/continuedev/continue/blob/main/core/llm/llms/Vllm.ts)
