--- a/docs/customize/model-providers/top-level/gemini.mdx
+++ b/docs/customize/model-providers/top-level/gemini.mdx
@@ -44,7 +44,7 @@ We recommend configuring **Gemini 2.0 Flash** as your chat model.
 
 Gemini currently does not offer any autocomplete models.
 
-[Click here](../../model-roles/autocomplete.md) to see a list of autocomplete model providers.
+[Click here](../../model-roles/autocomplete) to see a list of autocomplete model providers.
 
 ## How to Configure Gemini Embeddings Models
 
