--- a/docs/customize/model-providers/top-level/openai.mdx
+++ b/docs/customize/model-providers/top-level/openai.mdx
@@ -44,7 +44,7 @@ We recommend configuring **GPT-4o** as your chat model.
 
 OpenAI currently does not offer any autocomplete models.
 
-[Click here](../../model-roles/autocomplete.md) to see a list of autocomplete model providers.
+[Click here](../../model-roles/autocomplete) to see a list of autocomplete model providers.
 
 ## How to Configure OpenAI Embeddings Models
 
