--- a/docs/customize/model-roles/00-intro.mdx
+++ b/docs/customize/model-roles/00-intro.mdx
@@ -9,7 +9,7 @@ sidebar_label: Introduction
 Models in Continue can be configured to be used for various roles in the extension.
 
 - [`chat`](./chat.mdx): Used for chat conversations in the extension sidebar
-- [`autocomplete`](./autocomplete.md): Used for autocomplete code suggestions in the editor
+- [`autocomplete`](./autocomplete): Used for autocomplete code suggestions in the editor
 - [`edit`](./edit.mdx): Used to generate code based on edit prompts
 - [`apply`](./apply.mdx): Used to decide how to apply edits to a file
 - [`embed`](./embeddings.mdx): Used to generate embeddings used for vector search (@Codebase and @Docs context providers)
