--- a/docs/customize/model-roles/reranking.mdx
+++ b/docs/customize/model-roles/reranking.mdx
@@ -131,6 +131,7 @@ The `"modelTitle"` field must match one of the models in your "models" array in 
     models:
       - name: Huggingface-tei Reranker
         provider: huggingface-tei
+        model: tei
         apiBase: http://localhost:8080
         apiKey: <YOUR_TEI_API_KEY>
         roles:
