--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -12,6 +12,6 @@ title: "Introduction"
 - [Edit](/features/edit/quick-start) to modify code without leaving your current file
 - [Autocomplete](/features/autocomplete/quick-start) to receive inline code suggestions as you type
 
-2. Try out [Continue CLI (cn)](https://docs.continue.dev/guides/cli) and give us feedback.
+2. Try out [Continue CLI (cn)](https://docs.continue.dev/guides/cli) and give us feedback
 
 3. Discover the models, rules, and MCP tools you need to create a custom AI coding agent on [Continue Hub](https://hub.continue.dev/)
