--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,7 +7,15 @@ icon: book-open
   <img src="/images/intro-0c302b9c15b890c251b1ad04586c880f.png" />
 </Frame>
 
-**Continue enables developers to create, share, and use custom AI code assistants with our open-source [VS Code](https://marketplace.visualstudio.com/items?itemName=Continue.continue) and [JetBrains](https://plugins.jetbrains.com/plugin/22707-continue-extension) extensions and [hub of models, rules, prompts, docs, and other building blocks](https://hub.continue.dev)**
+**Continue enables developers to ship faster with Continuous AI.**
+
+**You can use Continue to build and run custom agents across your IDE, terminal, and CI.**
+
+1. Get started with Continue in [VS Code](https://marketplace.visualstudio.com/items?itemName=Continue.continue) or [JetBrains](https://plugins.jetbrains.com/plugin/22707-continue-extension) extensions
+
+2. Try out [Continue CLI (cn)](https://docs.continue.dev/guides/cli) and give us feedback
+
+3. Discover the models, rules, and MCP tools you need to create a custom AI coding agent on [Continue Hub](https://hub.continue.dev/)
 
 <CardGroup cols={2}>
   <Card
