adding jetbrains + vscode changes

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -19,12 +19,28 @@ icon: book-open
 
 <CardGroup cols={2}>
   <Card
+    title="Agent"
+    icon="robot"
+    href="/features/agent/quick-start"
+    horizontal
+  >
+    to work on development tasks together with AI
+  </Card>
+  <Card
     title="Chat"
     icon="messages"
     href="/features/chat/quick-start"
     horizontal
   >
-    to understand and iterate on code in the sidebar
+    to ask general questions and clarify code sections
+  </Card>
+  <Card
+    title="Edit"
+    icon="pen-to-square"
+    href="/features/edit/quick-start"
+    horizontal
+  >
+    to modify a code section without leaving your current file
   </Card>
   <Card
     title="Autocomplete"
@@ -34,20 +50,5 @@ icon: book-open
   >
     to receive inline code suggestions as you type
   </Card>
-  <Card
-    title="Edit"
-    icon="pen-to-square"
-    href="/features/edit/quick-start"
-    horizontal
-  >
-    to modify code without leaving your current file
-  </Card>
-  <Card
-    title="Agent"
-    icon="robot"
-    href="/features/agent/quick-start"
-    horizontal
-  >
-    to make more substantial changes to your codebase
-  </Card>
+
 </CardGroup>
