--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -15,7 +15,7 @@ icon: book-open
 
 2. Try out [Continue CLI (cn)](https://docs.continue.dev/guides/cli) and give us feedback
 
-3. Discover the models, rules, and MCP tools you need to create a custom AI coding agent on [Continue Hub](https://hub.continue.dev/)
+3. Discover models, rules, and MCP tools on [Continue Hub](https://hub.continue.dev/)
 
 <CardGroup cols={2}>
   <Card
