Fix broken links

--- a/docs/features/agent/quick-start.mdx
+++ b/docs/features/agent/quick-start.mdx
@@ -59,7 +59,7 @@ You can switch to `Agent` in the mode selector below the chat input box. The mod
 
 ### How to Chat with Agent
 
-Agent lives within the same interface as [Chat](/features/chat/how-it-works), so the same [input](/features/chat/quick-start#1-start-a-conversation) is used to send messages and you can still use the same manual methods of providing context, such as [`@` context providers](/features/chat/quick-start#3-use--for-additional-context) or adding [highlighted code from the editor](/features/chat/quick-start#2-include-code-context).
+Agent lives within the same interface as [Chat](/features/chat/how-it-works), so the same [input](/features/chat/quick-start#how-to-start-a-conversation) is used to send messages and you can still use the same manual methods of providing context, such as [`@` context providers](/features/chat/quick-start#how-to-use--for-additional-context) or adding [highlighted code from the editor](/features/chat/quick-start#how-to-include-code-context).
 
 #### How to Use Natural Language with Agent
 
