--- a/docs/guides/build-your-own-context-provider.mdx
+++ b/docs/guides/build-your-own-context-provider.mdx
@@ -42,7 +42,7 @@ The `"options"` property can be used to send additional parameters to your endpo
 <Info>
   The following methods for creating custom context providers are deprecated. We
   recommend using HTTP context providers, [MCP
-  Servers](/customization/mcp-tools), and [Prompts](/customization/prompts)
+  Servers](/customize/deep-dives/mcp), and [Prompts](/customize/deep-dives/prompts)
   where possible.
 </Info>
 
