--- a/docs/customize/overview.mdx
+++ b/docs/customize/overview.mdx
@@ -25,7 +25,7 @@ Detailed technical explanations of Continue's internal workings and advanced con
 
 Configure and optimize different AI model providers for your specific needs and infrastructure.
 
-[Configure Providers →](/customization/models#openai)
+[Configure Providers →](/customize/model-providers/top-level/openai)
 
 ## Model Roles
 
