Fix broken links

--- a/docs/customize/context/documentation.mdx
+++ b/docs/customize/context/documentation.mdx
@@ -16,7 +16,7 @@ toc_max_heading_level: 5
 sidebarTitle: "@Docs"
 ---
 
-The [`@Docs` context provider](../custom-providers#docs) allows you to efficiently reference documentation directly within Continue.
+The `@Docs` context provider allows you to efficiently reference documentation directly within Continue.
 
 ## How to Enable the @Docs Context Provider
 
