--- a/docs/customize/overview.mdx
+++ b/docs/customize/overview.mdx
@@ -13,13 +13,13 @@ Master how Continue understands your codebase with powerful context providers fo
 
 Specialized context features for codebase understanding and documentation integration.
 
-[Browse Context Features →](/customize/context/codebase)
+[Browse Context Features →](customize/context/codebase)
 
 ## Deep Dives
 
 Detailed technical explanations of Continue's internal workings and advanced configuration options.
 
-[Read Deep Dives →](/customization/overview#configuration)
+[Read Deep Dives →](/customize/deep-dives/configuration)
 
 ## Model Providers
 
