--- a/docs/features/autocomplete/model-setup.mdx
+++ b/docs/features/autocomplete/model-setup.mdx
@@ -52,4 +52,4 @@ If you're not seeing any completions or need more detailed configuration options
 
 ## Model Compatibility
 
-To see a complete list of models and their capabilities, visit our [Model Capabilities guide](/customize/deep-dives/model-capabilities#model-compatibility-matrix).
+To see a complete list of models and their capabilities, visit our [Model Capabilities guide](/customize/deep-dives/model-capabilities).
