--- a/docs/features/edit/model-setup.mdx
+++ b/docs/features/edit/model-setup.mdx
@@ -19,4 +19,4 @@ We also recommend setting up an Apply model for the best Edit experience.
 
 ## How to Determine Model Compatibility
 
-For a complete overview of which models support various features, see our [Model Capabilities guide](/customize/deep-dives/model-capabilities#model-compatibility-matrix).
+For a complete overview of which models support various features, see our [Model Capabilities guide](/customize/deep-dives/model-capabilities).
