--- a/docs/customize/context/codebase.mdx
+++ b/docs/customize/context/codebase.mdx
@@ -101,4 +101,4 @@ If you need to force a refresh of the index, reload the VS Code window with <kbd
 
 ## How Repository Map Enhances Codebase Understanding
 
-Models in the Claude 3, Llama 3.1/3.2, Gemini 1.5, and GPT-4o families will automatically use a [repository map](../custom-providers#repository-map-context-provider--reference-codebase-outline-and-signatures) during codebase retrieval, which allows the model to understand the structure of your codebase and use it to answer questions. Currently, the repository map only contains the filepaths in the codebase.
+Models in the Claude 3, Llama 3.1/3.2, Gemini 1.5, and GPT-4o families will automatically use a [repository map](/customize/context/codebase#repository-map) during codebase retrieval, which allows the model to understand the structure of your codebase and use it to answer questions. Currently, the repository map only contains the filepaths in the codebase.
