--- a/docs/faqs.mdx
+++ b/docs/faqs.mdx
@@ -9,24 +9,32 @@ description: "Frequently asked questions about Continue"
 
 If you're seeing a `fetch failed` error and your network requires custom certificates, you will need to configure them in your config file. In each of the objects in the `"models"` array, add `requestOptions.caBundlePath` like this:
 
-- YAML
-- JSON
-
-config.yaml
-
-```
-models:
-  - name: My Model
-    ...
-    requestOptions:
-      caBundlePath: /path/to/cert.pem
-```
-
-config.json
-
-```json
-{  "models": [    {      "title": "My Model",      ...      "requestOptions": {        "caBundlePath": "/path/to/cert.pem"      }    }  ],}
-```
+<Tabs>
+  <Tab title="YAML">
+    ```yaml
+    models:
+      - name: My Model
+        ...
+        requestOptions:
+          caBundlePath: /path/to/cert.pem
+    ```
+  </Tab>
+  <Tab title="JSON">
+    ```json
+    {
+      "models": [
+        {
+          "name": "My Model",
+          "...": "...",
+          "requestOptions": {
+            "caBundlePath": "/path/to/cert.pem"
+          }
+        }
+      ]
+    }
+    ```
+  </Tab>
+</Tabs>
 
 You may also set `requestOptions.caBundlePath` to an array of paths to multiple certificates.
 
@@ -146,4 +154,4 @@ If you'd like to perform a clean reset of the extension, including removing all 
 
 ## Still having trouble?
 
-You can also join our Discord community [here](https://discord.gg/vapESyrFmJ) for additional support and discussions. Alternatively, you can create a GitHub issue [here](https://github.com/continuedev/continue/issues/new?assignees=&labels=bug&projects=&template=bug-report-%F0%9F%90%9B.md&title=), providing details of your problem, and we'll be able to help you out more quickly.
+You can also join our Discord community [here](https://discord.gg/vapESyrFmJ) for additional support and GitHub Discussions. Alternatively, you can create a GitHub issue [here](https://github.com/continuedev/continue/issues/new?assignees=&labels=bug&projects=&template=bug-report-%F0%9F%90%9B.md&title=), providing details of your problem, and we'll be able to help you out more quickly.
