--- a/docs/faqs.mdx
+++ b/docs/faqs.mdx
@@ -148,7 +148,7 @@ For more details about this requirement, see the [LanceDB issue #2195](https://g
 
 ## How do I reset the state of the extension?
 
-Continue stores it's data in the `~/.continue` directory (%USERPROFILE%.continue\` on Windows).
+Continue stores its data in the `~/.continue` directory (`%USERPROFILE%\.continue` on Windows).
 
 If you'd like to perform a clean reset of the extension, including removing all configuration files, indices, etc, you can remove this directory, uninstall, and then reinstall.
 
