Add Next Edit to model setup for edit

--- a/docs/features/edit/model-setup.mdx
+++ b/docs/features/edit/model-setup.mdx
@@ -11,17 +11,13 @@ We also recommend setting up an Apply model for the best Edit experience.
 - [Morph v3](https://hub.continue.dev/morphllm/morph-v2)
 - [Relace Instant Apply](https://hub.continue.dev/relace/instant-apply)
 
-## Next Edit Models
-
-<Warning>
-Next Edit is currently an experimental feature available to Continue development team members and requires specialized models.
-</Warning>
+## Next Edit Model
 
 For proactive code prediction that anticipates your next edit, Continue supports specialized [Next Edit](/features/edit/next-edit) models:
 
-**Supported Next Edit models:**
+**Supported Next Edit model:**
+
 - `mercury-coder-nextedit`: Primary model optimized for next edit prediction
-- `model-1`: Alternative model with different prompting strategies
 
 Next Edit automatically activates when you have a compatible model configured for autocomplete and the appropriate access permissions.
 
