--- a/docs/features/edit/next-edit.mdx
+++ b/docs/features/edit/next-edit.mdx
@@ -42,15 +42,18 @@ Next Edit activates automatically when:
     **Next Edit**: Predicts entire code modifications across multiple lines
   </Accordion>
 
-<Accordion title="User Interaction">
-  **Autocomplete**: Shows ghost text at your cursor position **Next Edit**:
-  Displays diff overlays showing before/after changes
-</Accordion>
+  <Accordion title="User Interaction">
+    **Autocomplete**: Shows ghost text at your cursor position
 
-<Accordion title="Timing">
-  **Autocomplete**: Reactive - responds to what you're currently typing **Next
-  Edit**: Proactive - anticipates what you'll do next
-</Accordion>
+    **Next Edit**: Displays diff overlays showing before/after changes
+
+   </Accordion>
+
+    <Accordion title="Timing">
+     **Autocomplete**: Reactive - responds to what you're currently typing
+
+     **Next Edit**: Proactive - anticipates what you'll do next
+    </Accordion>
 
   <Accordion title="Context Awareness">
     **Autocomplete**: Focuses on immediate code completion
@@ -65,7 +68,7 @@ Next Edit activates automatically when:
 
 Next Edit requires:
 
-- Compatible AI models (`mercury-coder-nextedit` or `model-1`)
+- Compatible AI models (`mercury-coder-nextedit`)
 - Continue development team access
 - VS Code (JetBrains support coming soon)
 
@@ -121,8 +124,9 @@ Continue automatically enables Next Edit when:
 </Card>
 
 <Card title="Provide Feedback" icon="message">
-  Use the feedback system to help improve prediction accuracy for your coding
-  style.
+  Have feedback? We want to hear it. __[Add your thoughts to our feedback
+  discussions](https://github.com/continuedev/continue/discussions/categories/feedback)__
+  to help us improve.
 </Card>
 
   <Card title="Combine with Other Features" icon="puzzle-piece">
