--- a/docs/features/edit/next-edit.mdx
+++ b/docs/features/edit/next-edit.mdx
@@ -72,6 +72,7 @@ Next Edit requires:
 - Compatible AI models (Mercury Coder Next Edit)
 - Continue development team access
 - VS Code (JetBrains support coming soon)
+- **API Keys**: Organizations can add API keys to [org secrets](/hub/secrets/secret-types) for team-wide access. Individual users need to provide their own API keys in their [model configuration](/customize/model-providers/overview)
 
 <Note>
   To use Next Edit, you must have the Mercury Coder Next Edit model configured
