Optimize model-setup and move next edit to autocomplete

--- a/docs/features/autocomplete/model-setup.mdx
+++ b/docs/features/autocomplete/model-setup.mdx
@@ -1,6 +1,12 @@
+---
+title: "What Models are Recommended for Autocomplete?"
+sidebarTitle: Model Setup
+description: "Learn how to configure and optimize AI models for Continue's autocomplete feature. Compare top model providers, setup instructions, and performance recommendations for the best coding assistance experience."
+---
+
 Setting up the right model for autocomplete is crucial for a smooth coding experience. Here are our top recommendations:
 
-## Recommended Models
+## What are the Recommended Models?
 
 ### Hosted (Best Performance)
 
@@ -39,6 +45,16 @@ This model provides good suggestions while keeping your code completely private.
 1. Install [Ollama](https://ollama.ai/)
 2. Add [Qwen 2.5 Coder 1.5B](https://hub.continue.dev/ollama/qwen2.5-coder-1.5b) to your assistant on Continue Hub
 3. Click `Reload config` in the assistant selector in the Continue IDE extension
+
+## Next Edit Model
+
+For proactive code prediction that anticipates your next edit, Continue supports specialized [Next Edit](/features/edit/next-edit) models:
+
+**Supported Next Edit model:**
+
+- `mercury-coder-nextedit`: Primary model optimized for next edit prediction
+
+Next Edit automatically activates when you have a compatible model configured for autocomplete and the appropriate access permissions.
 
 ## Need Help?
 
